// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSlots sample code test suite renders sample 1 - the two types of basic bold text components 1`] = `
<div>
  <BoldTextStaged
    style={
      Object {
        "color": "black",
      }
    }
  >
    <span
      style={
        Object {
          "color": "black",
          "fontWeight": 900,
        }
      }
    >
      Staged component at one level
    </span>
  </BoldTextStaged>
  <BoldTextStandard
    style={
      Object {
        "color": "black",
      }
    }
  >
    <span
      style={
        Object {
          "color": "black",
          "fontWeight": 900,
        }
      }
    >
      Standard component of a single level
    </span>
  </BoldTextStandard>
</div>
`;

exports[`useSlots sample code test suite renders sample 2 = the two types of two level header components 1`] = `
<div>
  <HeaderStaged
    style={
      Object {
        "color": "black",
      }
    }
  >
    <span
      style={
        Object {
          "color": "black",
          "fontSize": 20,
          "fontWeight": 900,
        }
      }
    >
      Staged component with two levels
    </span>
  </HeaderStaged>
  <HeaderStandard
    style={
      Object {
        "color": "black",
      }
    }
  >
    <BoldTextStandard
      style={
        Object {
          "color": "black",
          "fontSize": 20,
        }
      }
    >
      <span
        style={
          Object {
            "color": "black",
            "fontSize": 20,
            "fontWeight": 900,
          }
        }
      >
        Standard component with two levels
      </span>
    </BoldTextStandard>
  </HeaderStandard>
</div>
`;

exports[`useSlots sample code test suite renders sample 3 - the two types of higher order header components 1`] = `
<div>
  <span>
    --- SIMPLE USAGE COMPARISON ---
  </span>
  <CaptionedHeaderStandard';
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <HeaderStandard>
        <BoldTextStandard
          style={
            Object {
              "fontSize": 20,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 20,
                "fontWeight": 900,
              }
            }
          >
            Standard HOC
          </span>
        </BoldTextStandard>
      </HeaderStandard>
    </div>
  </CaptionedHeaderStandard';>
  <CaptionedHeaderStaged
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <span
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 900,
          }
        }
      >
        Staged HOC
      </span>
    </div>
  </CaptionedHeaderStaged>
  <span>
    --- COMPARISON WITH CAPTIONS ---
  </span>
  <CaptionedHeaderStandard';
    captionText="Caption text"
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <HeaderStandard>
        <BoldTextStandard
          style={
            Object {
              "fontSize": 20,
            }
          }
        >
          <span
            style={
              Object {
                "fontSize": 20,
                "fontWeight": 900,
              }
            }
          >
            Standard HOC with Caption
          </span>
        </BoldTextStandard>
      </HeaderStandard>
      <BoldTextStandard>
        <span
          style={
            Object {
              "fontWeight": 900,
            }
          }
        >
          Caption text
        </span>
      </BoldTextStandard>
    </div>
  </CaptionedHeaderStandard';>
  <CaptionedHeaderStaged
    captionText="Caption text"
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <span
        style={
          Object {
            "fontSize": 20,
            "fontWeight": 900,
          }
        }
      >
        Staged HOC with Caption
      </span>
      <span
        style={
          Object {
            "fontWeight": 900,
          }
        }
      >
        Caption text
      </span>
    </div>
  </CaptionedHeaderStaged>
  <span>
    --- COMPARISON WITH CAPTIONS AND CUSTOMIZATIONS ---
  </span>
  <CaptionedHeaderStandard';
    captionColor="yellow"
    captionText="Caption text"
    headerColor="red"
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <HeaderStandard
        style={
          Object {
            "color": "red",
          }
        }
      >
        <BoldTextStandard
          style={
            Object {
              "color": "red",
              "fontSize": 20,
            }
          }
        >
          <span
            style={
              Object {
                "color": "red",
                "fontSize": 20,
                "fontWeight": 900,
              }
            }
          >
            Standard HOC with caption and customizations
          </span>
        </BoldTextStandard>
      </HeaderStandard>
      <BoldTextStandard
        style={
          Object {
            "color": "yellow",
          }
        }
      >
        <span
          style={
            Object {
              "color": "yellow",
              "fontWeight": 900,
            }
          }
        >
          Caption text
        </span>
      </BoldTextStandard>
    </div>
  </CaptionedHeaderStandard';>
  <CaptionedHeaderStaged
    captionColor="yellow"
    captionText="Caption text"
    headerColor="red"
    style={
      Object {
        "backgroundColor": "gray",
        "borderColor": "purple",
        "borderWidth": 1,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "gray",
          "borderColor": "purple",
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <span
        style={
          Object {
            "color": "red",
            "fontSize": 20,
            "fontWeight": 900,
          }
        }
      >
        Staged HOC with caption and customizations
      </span>
      <span
        style={
          Object {
            "color": "yellow",
            "fontWeight": 900,
          }
        }
      >
        Caption text
      </span>
    </div>
  </CaptionedHeaderStaged>
</div>
`;
